--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,22 @@
-.board {
-    width: 100vw;
-    height: 100vh;
+.content {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+}
+.board {
+    width: 90vw;
+}
+
+.playArea {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 16px;
+
 }
