--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
     width: 100vw;
     height: 100vh;
     position: relative;
+    background-size: cover;
+    background-position: center;
 }
 .board {
     width: 90vw;
