--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,6 +1,6 @@
 .button {
     padding: 8px 28px;
-    size: 16px;
+    font-size: 16px;
     color: black;
     background: lightgray;
     border-radius: 4px;
