--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -1,6 +1,6 @@
 .input {
-    padding: 0 26px;
-    size: 16px;
+    padding: 0 18px;
+    font-size: 16px;
     color: black;
     background: lightgray;
     border: 1px solid lightslategray;
