--- a/src/App.css
+++ b/src/App.css
@@ -20,5 +20,11 @@
     width: 100%;
     height: 100%;
     padding: 16px;
+    background: transparent;
+    transition: all 500ms ease-in-out;
+}
 
+.playArea.GAME,
+.playArea.MATCH {
+    background: #ffffff88;
 }
